# tlshare-tee-nildb

./: .env.sample  .gitignore  .pylintrc  Dockerfile  LICENSE  README.md  docker-compose.yml  gunicorn.conf.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
caddy/: Caddyfile
src/: __init__.py  amazon_schema.json  client.py  config.py  key_management.py  main.py  nildb_operations.py  server.py
src/client/: client.py
src/config/: config.json  config.py  key_management.py  logging.py
src/examples/: data.py
src/nildb/: nildb_operations.py  org_config.py
src/nildb/schemas/: amazon_schema_query_sum.json  query_sum.json  schema.json
src/server/: server.py
test/: __init__.py  conftest.py  test_examples.py  test_key_management.py  test_message_processing.py  test_patterns.py  test_server.py
