[project]
name = "tlshare-tee-nildb"
version = "0.0.0"
description = """\
    Server (running on a TEE) that accepts requests from a client\
     of a zkTLS connection and secret shares the data to nilDB.\
    """
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "cryptography>=3.4",
    "requests>=2.31.0",
    "secretvaults==0.0.0a6",
    "gunicorn>=23.0.0",
]

[project.urls]
Repository = "https://github.com/jimouris/tlshare-tee-nildb"
#Documentation = "https://tlshare-tee-nildb.readthedocs.io"

[project.optional-dependencies]
docs = [
    "toml~=0.10.2",
    "sphinx~=5.0",
    "sphinx-rtd-theme~=2.0.0"
]
test = [
    "pytest~=8.2",
    "pytest-cov~=5.0",
    "pytest-asyncio~=0.23.5",
    "httpx~=0.26.0"
]
lint = [
    "pylint~=3.2.0"
]
coveralls = [
    "coveralls~=4.0"
]
publish = [
    "build~=0.10",
    "twine~=4.0"
]
dev = [
    "pylint~=3.2.0",
    "pytest~=8.2",
    "pytest-cov~=5.0",
    "pytest-asyncio~=0.23.5",
    "httpx~=0.26.0",
    "toml~=0.10.2",
    "sphinx~=5.0",
    "sphinx-rtd-theme~=2.0.0",
    "coveralls~=4.0",
    "build~=0.10",
    "twine~=4.0"
]

[build-system]
requires = [
    "setuptools>=68.0"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--doctest-modules --ignore=docs --cov=src --cov-report term-missing"
