[project]
name = "tlshare-tee-nildb"
version = "0.0.1"
description = """\
    Server (running on a TEE) that accepts requests from a client\
     of a zkTLS connection and secret shares the data to nilDB.\
    """
authors = [
    { name = "Dimitris Mouris", email = "dimitris@nillion.com" },
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "cryptography>=3.4",
    "requests>=2.31.0",
    "secretvaults==0.0.0a6",
    "gunicorn>=23.0.0",
]

[project.urls]
Repository = "https://github.com/jimouris/tlshare-tee-nildb"

[project.optional-dependencies]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "pylint>=3.2.7",
]

test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

lint = [
    "pylint>=3.2.7",
    "isort>=5.13.2",
]

[build-system]
requires = [
    "setuptools>=68.0"
]
build-backend = "setuptools.build_meta"
